--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 &#8594
               </div>
             </div>
-            <div class="menu__name">
+            <div id="top-250" class="menu__name">
               <p class="menu__name-text">
-                Скоро
+                Топ 250 IMDb
               </p>
               <div class="menu__name-arrow">
                 &#8594
@@ -57,79 +57,7 @@
         </aside>
         <div class="content">
           <h1 class="content__title">Новые релизы</h1>
-          <div class="content__list">
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
-            <div class="movie__prev">
-              <div class="movie__rating">7.0</div>
-              <div class="movie__poster">
-                <img src="img/poster.jpg" alt="movie-poster" class="movie__poster-img">
-              </div>
-              <p class="movie__name">Movie</p>
-              <p class="movie__genre">Genre</p>
-            </div>
+          <div id="content-list" class="content__list">
           </div>
         </div>
       </main>
