--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 &#8594
               </div>
             </div>
-            <div class="menu__name">
+            <div id="popular-btn" class="menu__name">
               <p class="menu__name-text">
-                В тренде
+                Популярные
               </p>
               <div class="menu__name-arrow">
                 &#8594
@@ -56,7 +56,7 @@
           </nav>
         </aside>
         <div class="content">
-          <h1 class="content__title">Новые релизы</h1>
+          <h1 id="content-title" class="content__title">Новые релизы</h1>
           <div id="content-list" class="content__list">
           </div>
         </div>
