single movie process

--- a/index.html
+++ b/index.html
@@ -82,16 +82,59 @@
             <div class="movie__filter-single">
               <p class="movie__filter-genre-title">Жанр</p>
               <div class="movie__filter-check">
-                <input id="drama-checkbox" type="checkbox">
+                <input class="genre-checkbox" value="drama" id="drama-checkbox" type="checkbox">
                 <label for="drama-checkbox">Drama</label>
               </div>
               <div class="movie__filter-check">
-                <input id="action-checkbox" type="checkbox">
+                <input class="genre-checkbox" value="action" id="action-checkbox" type="checkbox">
                 <label for="action-checkbox">Action</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="crime" id="crime-checkbox" type="checkbox">
+                <label for="crime-checkbox">Crime</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="thriller" id="thriller-checkbox" type="checkbox">
+                <label for="thriller-checkbox">Thriller</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="boigraphy" id="boigraphy-checkbox" type="checkbox">
+                <label for="boigraphy-checkbox">Biograph</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="history" id="history-checkbox" type="checkbox">
+                <label for="history-checkbox">History</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="adventure" id="adventure-checkbox" type="checkbox">
+                <label for="adventure-checkbox">Adventure</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="fantasy" id="fantasy-checkbox" type="checkbox">
+                <label for="fantasy-checkbox">Fantasy</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="western" id="western-checkbox" type="checkbox">
+                <label for="western-checkbox">Western</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="sci-fi" id="sci-fi-checkbox" type="checkbox">
+                <label for="sci-fi-checkbox">Sci-Fi</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="comedy" id="comedy-checkbox" type="checkbox">
+                <label for="comedy-checkbox">Comedy</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="horror" id="horror-checkbox" type="checkbox">
+                <label for="horror-checkbox">Horror</label>
+              </div>
+              <div class="movie__filter-check">
+                <input class="genre-checkbox" value="war" id="war-checkbox" type="checkbox">
+                <label for="war-checkbox">War</label>
               </div>
             </div>
             <button id="movie-filter-btn" class="movie__filter-btn">Найти</button>
-
           </div>
         </aside>
         <div class="content">
@@ -101,6 +144,38 @@
           <div id="loading-modal" class="content__loading">
             <p class="content__loading-text">Загружаем...</p>
             <div class="content__loading-icon"></div>
+          </div>
+          <div class="movie-single-block">
+            <div class="movie-single__poster">
+              <img src="img/poster.jpg" alt="poster" class="movie-single__poster-img">
+            </div>
+            <div class="movie-single__info">
+              <h2 class="movie-single__title">Blablabka</h2>
+              <div class="movie-single__main-info">
+                <div class="single-info">
+                  <p class="single-info__title">Release</p>
+                  <p class="single-info__descr">June 17</p>
+                </div>
+                <div class="single-info">
+                  <p class="single-info__title">Dir</p>
+                  <p class="single-info__descr">Blf</p>
+                </div>
+                <div class="single-info">
+                  <p class="single-info__title">Release</p>
+                  <p class="single-info__descr">June 17</p>
+                </div>
+              </div>
+              <div class="movie-single__ratings">
+                <div class="movie-single__rating">
+                  <div class="movie-single__rating-number">7/10</div>
+                  <div class="movie-single__rating-name">IMBd</div>
+                </div>
+                <div class="movie-single__rating">
+                  <div class="movie-single__rating-number">67%</div>
+                  <div class="movie-single__rating-name">MetaCritic</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </main>
