--- a/index.html
+++ b/index.html
@@ -138,8 +138,57 @@
           </div>
         </aside>
         <div class="content">
-          <h1 id="content-title" class="content__title">Новые релизы</h1>
+          <div class="content__header">
+            <h1 id="content-title" class="content__title">Новые релизы</h1>
+            <div class="content__sort">
+              <p class="content__sort-text">Сортировать по:</p>
+              <select id="content-sort" type="text" class="content__sort-input">
+                <option value="" selected disabled>Выберите</option>
+                <option value="a-z">&#8595 А-Я</option>
+                <option value="z-а">&#8593 А-Я</option>
+                <option value="year-up">&#8595 Год</option>
+                <option value="year-down">&#8593 Год</option>
+                <option value="imdb-up">&#8595 Рейтинг IMDb</option>
+                <option value="imdb-down">&#8593 Рейтинг IMDb</option>
+                <option value="runtime-up">&#8595 Время</option>
+                <option value="runtime-down">&#8593 Время</option>
+              </select>
+            </div>
+          </div>
+
           <div id="content-list" class="content__list">
+            <div class="movie__prev" data-id="tt3228774">
+              <div class="movie__rating">N/A</div>
+              <div class="movie__poster">
+                <img
+                  src="https://m.media-amazon.com/images/M/MV5BOWI5YTUxOWEtZmRiZS00ZmQxLWE2NzctYTRiODA2NzE1ZjczXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_SX300.jpg"
+                  alt="movie-poster" class="movie__poster-img">
+                <div class="movie__descr">
+                  <p class="movie__director">Craig Gillespie</p>
+                  <p class="movie__crew">Emma Stone, Emma Thompson, Mark Strong, Paul Walter Hauser</p>
+                  <div class="movie__year">2021</div>
+                  <p class="movie__runtime">134 min</p>
+                </div>
+              </div>
+              <p class="movie__name">Cruella</p>
+              <p class="movie__genre">Comedy, Crime</p>
+            </div>
+            <div class="movie__prev" data-id="tt0111161">
+              <div class="movie__rating">9.3</div>
+              <div class="movie__poster">
+                <img
+                  src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jpg"
+                  alt="movie-poster" class="movie__poster-img">
+                <div class="movie__descr">
+                  <p class="movie__director">Frank Darabont</p>
+                  <p class="movie__crew">Tim Robbins, Morgan Freeman, Bob Gunton, William Sadler</p>
+                  <div class="movie__year">1994</div>
+                  <p class="movie__runtime">142 min</p>
+                </div>
+              </div>
+              <p class="movie__name">The Shawshank Redemption</p>
+              <p class="movie__genre">Drama</p>
+            </div>
           </div>
           <div id="loading-modal" class="content__loading">
             <p class="content__loading-text">Загружаем...</p>
@@ -149,7 +198,7 @@
       </main>
     </div>
   </div>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
   <script src="js/script.js"></script>
