--- a/index.html
+++ b/index.html
@@ -155,40 +155,8 @@
               </select>
             </div>
           </div>
-
+          <div id="load-page-btn" class="load-page-btn"></div>
           <div id="content-list" class="content__list">
-            <div class="movie__prev" data-id="tt3228774">
-              <div class="movie__rating">N/A</div>
-              <div class="movie__poster">
-                <img
-                  src="https://m.media-amazon.com/images/M/MV5BOWI5YTUxOWEtZmRiZS00ZmQxLWE2NzctYTRiODA2NzE1ZjczXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_SX300.jpg"
-                  alt="movie-poster" class="movie__poster-img">
-                <div class="movie__descr">
-                  <p class="movie__director">Craig Gillespie</p>
-                  <p class="movie__crew">Emma Stone, Emma Thompson, Mark Strong, Paul Walter Hauser</p>
-                  <div class="movie__year">2021</div>
-                  <p class="movie__runtime">134 min</p>
-                </div>
-              </div>
-              <p class="movie__name">Cruella</p>
-              <p class="movie__genre">Comedy, Crime</p>
-            </div>
-            <div class="movie__prev" data-id="tt0111161">
-              <div class="movie__rating">9.3</div>
-              <div class="movie__poster">
-                <img
-                  src="https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jpg"
-                  alt="movie-poster" class="movie__poster-img">
-                <div class="movie__descr">
-                  <p class="movie__director">Frank Darabont</p>
-                  <p class="movie__crew">Tim Robbins, Morgan Freeman, Bob Gunton, William Sadler</p>
-                  <div class="movie__year">1994</div>
-                  <p class="movie__runtime">142 min</p>
-                </div>
-              </div>
-              <p class="movie__name">The Shawshank Redemption</p>
-              <p class="movie__genre">Drama</p>
-            </div>
           </div>
           <div id="loading-modal" class="content__loading">
             <p class="content__loading-text">Загружаем...</p>
