--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </select>
             </div>
           </div>
-          <div id="load-page-btn" class="load-page-btn"></div>
+          <div id="load-page-btn" class="load-page-btn">Загрузить еще</div>
           <div id="content-list" class="content__list">
           </div>
           <div id="loading-modal" class="content__loading">
