--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </div>
         <div class="search-movie">
           <img src="img/search.svg" alt="search-icon" class="search-icon">
-          <input type="text" class="search-input" placeholder="Найти фильм...">
+          <input id="search-input" type="text" class="search-input" placeholder="Найти фильм...">
+          <div id="search-reset-btn" class="search-reset">&#10006</div>
+          <div id="search-info-block" class="search-info">
+          </div>
         </div>
       </header>
       <main class="main">
