--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </aside>
         <div class="content">
           <div class="content__header">
-            <h1 id="content-title" class="content__title">Новые релизы</h1>
+            <h1 id="content-title" class="content__title"></h1>
             <div class="content__sort">
               <p class="content__sort-text">Сортировать по:</p>
               <select id="content-sort" type="text" class="content__sort-input">
